<resources>
    <string name="app_name">shop</string>
    <string name="create_account">Create new account</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login_here">Login Here</string>
    <string name="login">Login</string>
    <string name="new_user_register_here">New User? Register Here</string>
    <string name="language">Language</string>
    <string name="change_title">Change language</string>
    <string name="complete_purchase">Complete purchase</string>
    <string name="name">Name</string>
    <string name="my_orders">My orders</string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="notification">Your order is ready</string>
    <string name="owner">Owner</string>
    <string name="user">User</string>
    <string name="buffans">Buffan</string>
    <string name="tshirts">T-shirts</string>
    <string name="info">See the informations</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="edit">Edit the informations</string>
    <string name="add">Add product</string>
    <string name="nm">Name:</string>
    <string name="address">Address:</string>
    <string name="thl">Phone:</string>
    <string name="infromation">Informations</string>
    <string name="e">Edit</string>
    <string name="total">Total</string>
    <string name="addtocart">ADD TO CART</string>
    <string name="prd_id">ProductId:</string>
    <string name="type">Type:</string>
    <string name="a">Add</string>
    <string name="phone">phone</string>
    <string name="date">date</string>
</resources>