<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BuffanDetails">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="5dp" />

            <TextView
                android:id="@+id/title_dt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/title"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/price_dt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/price"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/black" />



        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/button4"
        android:layout_width="411dp"
        android:layout_height="50dp"
        android:onClick="addToCart"
        android:text="@string/addtocart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.891" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="51dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:onClick="addProduct"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/posotita"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:srcCompat="@drawable/ic_baseline_add_box_24" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="51dp"
        android:layout_height="48dp"
        android:onClick="removeProduct"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.498"
        app:srcCompat="@drawable/minus_111123" />

    <TextView
        android:id="@+id/posotita"
        android:layout_width="59dp"
        android:layout_height="44dp"
        android:layout_marginEnd="32dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.492" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="94dp"
        android:layout_height="51dp"
        android:layout_marginEnd="272dp"
        android:text="Amount"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/posotita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>